--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,26 @@ img {
     height: auto;
     border: blue solid 0.1vh;
     margin-left: auto !important;
+}
+
+.btn-right {
+    display: block;
+    margin-left: auto;
+    margin-bottom: 2vh;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 2vh;
+}
