arreglo para que el usuario sea redirigido a la página principal después de crear un nuevo contacto

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,12 @@ img {
     justify-content: flex-end;
     margin-bottom: 2vh;
 }
+.form-column h1 {
+   text-align: center;
+   
+    
+    
+}
 
 .form-column {
     display: flex;
